--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit
-pandas
-plotly
-XlsxWriter
+streamlit>=1.32.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.18.0
+scipy>=1.10.0
+openpyxl>=3.1.2
+xlsxwriter>=3.1.9
+python-dateutil>=2.8.2
